namespaces-apps/http-server/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: http-server
  labels:
    name: http-server
