namespaces-apps/http-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-http
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apache-http
  template:
    metadata:
      labels:
        app: apache-http
    spec:
      containers:
        - name: apache
          image: httpd:2.4
          ports:
            - containerPort: 80
          volumeMounts:
            - name: content
              mountPath: /usr/local/apache2/htdocs
              readOnly: true
            - name: config
              mountPath: /usr/local/apache2/conf/httpd.conf
              subPath: httpd.conf
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
          securityContext:
            allowPrivilegeEscalation: false
      volumes:
        - name: content
          hostPath:
            path: /data/nas/public/apache
            type: Directory
        - name: config
          configMap:
            name: apache-config
