namespaces-apps/http-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache-http
spec:
  selector:
    app: apache-http
  ports:
    - port: 80
      targetPort: 80
