namespaces-apps/http-server/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: apache-http
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - nas.lab.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: apache-http
          port: 80
